objects/PMC_CPQ_ProductSalesArea__c.object
<CustomObject>
    <fields>
        <fullName>PMC_CPQ_Inactive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This will determine if the Product Sales Area is inactive.</description>
        <label>Inactive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_ProductSalesAreaSAPIdentifier__c</fullName>
        <description>This should hold the concatenated value of Product SKU from SAP and Sales Org value from SAP.</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Product Sales Area SAP Identifier</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>PMC_CPQ_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipName>ProductSalesAreas</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_Sales_Area__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Area</label>
        <referenceTo>PMC_SS_SalesArea__c</referenceTo>
        <relationshipName>ProductSalesAreas</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Product Sales Area</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>PMC_CPQ_Sales_Area__c</columns>
        <columns>PMC_CPQ_Product__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PS-{0000}</displayFormat>
        <label>Product Sales Area Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Sales Areas</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>